:bug: events on mobile

--- a/packages/client/src/ui/ui.css
+++ b/packages/client/src/ui/ui.css
@@ -1,8 +1,11 @@
 .ui {
   display: flex;
+  position: absolute;
   flex-direction: column;
   flex: 1;
   align-items: center;
+  pointer-events: none;
+  width: 100%;
   height: 100%;
 }
 
@@ -11,4 +14,5 @@
   margin: 1em;
   margin-top: auto;
   margin-left: auto;
+  pointer-events: auto;
 }
